fix(deploy.yml): update Docker image tag to use env.REPO for consistency with environment variables

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
           platforms: linux/amd64
           push: true
           target: prod
-          tags: ghcr.io/${{ github.repository }}:latest
+          tags: ghcr.io/${{ env.REPO }}:latest
           labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
           secret-envs: CODECOV_TOKEN=CODECOV_TOKEN
           build-args: |
