fix(deploy.yml): correct label and build-arg to use env.REPO instead of github.repository for consistency and accuracy in image source and repository references

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,11 @@ jobs:
           push: true
           target: prod
           tags: ghcr.io/${{ env.REPO }}:latest
-          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ env.REPO }}
           secret-envs: CODECOV_TOKEN=CODECOV_TOKEN
           build-args: |
             GITHUB_SHA=${{ github.sha }}
-            GITHUB_REPOSITORY=${{ github.repository }}
+            GITHUB_REPOSITORY=${{ env.REPO }}
             GITHUB_REF_NAME=${{ github.ref_name }}
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
