--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,17 +26,16 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build
-        run: |
-          REPO="ghcr.io/$(echo ${{ github.repository_owner }} | tr '[:upper:]' '[:lower:]')/automog_pen:latest"
-          docker buildx build \
-            --platform linux/amd64 \
-            --push \
-            --target prod \
-            --tag $REPO \
-            --label "org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}" \
-            --build-arg GITHUB_SHA=${{ github.sha }} \
-            --build-arg GITHUB_REPOSITORY=$(echo ${{ github.repository }} | tr '[:upper:]' '[:lower:]') \
-            --build-arg GITHUB_REF_NAME=${{ github.ref_name }} \
-            --secret id=CODECOV_TOKEN,env=CODECOV_TOKEN
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64
+          push: true
+          target: prod
+          tags: ghcr.io/${{ github.repository_owner | toLowerCase() }}/automog_pen:latest
+          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository | toLowerCase() }}
+          build-args: |
+            GITHUB_SHA=${{ github.sha }}
+            GITHUB_REPOSITORY=${{ github.repository | toLowerCase() }}
+            GITHUB_REF_NAME=${{ github.ref_name }}
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
