--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
           platforms: linux/amd64
           push: true
           target: prod
-          tags: ghcr.io/${{ github.repository_owner | toLowerCase() }}/automog_pen:latest
+          tags: ghcr.io/pmassicotte/automog_pen:latest
           labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository | toLowerCase() }}
           build-args: |
             GITHUB_SHA=${{ github.sha }}
