--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,18 +28,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build
-      uses: docker/build-push-action@v6
-      with:
-        platforms: linux/amd64
-        push: true
-        target: prod
-        tags: ghcr.io/${{OWNER_LC}}:latest
-        labels: org.opencontainers.image.source=${{ github.server_url }}/${{ OWNER_LC }}
-        secret-envs:
-          CODECOV_TOKEN=CODECOV_TOKEN
-        build-args: |
-          GITHUB_SHA=${{ github.sha }}
-          GITHUB_REPOSITORY=${{ github.repository }}
-          GITHUB_REF_NAME=${{ github.ref_name }}
-      env:
-        CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64
+          push: true
+          target: prod
+          tags: ghcr.io/${{ env.OWNER_LC }}:latest
+          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ env.OWNER_LC }}
+          secret-envs: CODECOV_TOKEN=CODECOV_TOKEN
+          build-args: |
+            GITHUB_SHA=${{ github.sha }}
+            GITHUB_REPOSITORY=${{ github.repository }}
+            GITHUB_REF_NAME=${{ github.ref_name }}
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
