fix(deploy.yml): correct label for image source by using github.repository_owner for consistency and accuracy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           push: true
           target: prod
           tags: ghcr.io/pmassicotte/automog_pen:latest
-          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ env.OWNER_LC }}
+          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository_owner,, }}
           secret-envs: CODECOV_TOKEN=CODECOV_TOKEN
           build-args: |
             GITHUB_SHA=${{ github.sha }}
