--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,33 +12,30 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: set lower case owner name
-        run: |
-          echo "OWNER_LC=${OWNER,,}" >>${GITHUB_ENV}
-        env:
-          OWNER: "${{ github.repository_owner }}"
       - name: Checkout
         uses: actions/checkout@v4
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.repository_owner | toLowerCase() }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Build
         uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64
           push: true
           target: prod
-          tags: ghcr.io/pmassicotte/automog_pen:latest
-          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository_owner,, }}
-          secret-envs: CODECOV_TOKEN=CODECOV_TOKEN
+          tags: ghcr.io/${{ github.repository_owner | toLowerCase() }}/automog_pen:latest
+          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository | toLowerCase() }}
           build-args: |
             GITHUB_SHA=${{ github.sha }}
-            GITHUB_REPOSITORY=${{ github.repository }}
+            GITHUB_REPOSITORY=${{ github.repository | toLowerCase() }}
             GITHUB_REF_NAME=${{ github.ref_name }}
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
