--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,15 +25,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      # - name: Build
-      #   uses: docker/build-push-action@v6
-      #   with:
-      #     platforms: linux/amd64
-      #     push: true
-      #     target: prod
-      #     tags: ghcr.io/pmassicotte/automog_pen:latest
-      #     labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository | toLowerCase() }}
-      #     build-args: |
-      #       GITHUB_SHA=${{ github.sha }}
-      #       GITHUB_REPOSITORY=${{ github.repository | toLowerCase() }}
-      #       GITHUB_REF_NAME=${{ github.ref_name }}
+      - name: Build
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/amd64
+          push: false
+          target: prod
+          tags: ghcr.io/${{ github.repository_owner | toLowerCase()  }}/automog_pen:latest
+          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository | toLowerCase() }}
+          build-args: |
+            GITHUB_SHA=${{ github.sha }}
+            GITHUB_REPOSITORY=${{ github.repository | toLowerCase() }}
+            GITHUB_REF_NAME=${{ github.ref_name }}
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
