--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Convert Variables to Lowercase
+        run: |
+          echo "REPO_OWNER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+          echo "REPO_NAME=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner | toLowerCase() }}
+          username: ${{ env.REPO_OWNER }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Docker Buildx
@@ -31,11 +36,11 @@ jobs:
           platforms: linux/amd64
           push: false
           target: prod
-          tags: ghcr.io/${{ github.repository_owner | toLowerCase()  }}/automog_pen:latest
-          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository | toLowerCase() }}
+          tags: ghcr.io/${{ env.REPO_OWNER }}/automog_pen:latest
+          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ env.REPO_NAME }}
           build-args: |
             GITHUB_SHA=${{ github.sha }}
-            GITHUB_REPOSITORY=${{ github.repository | toLowerCase() }}
+            GITHUB_REPOSITORY=${{ env.REPO_NAME }}
             GITHUB_REF_NAME=${{ github.ref_name }}
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
