--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -12,16 +12,22 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-    container:
-      image: ghcr.io/${{ github.repository }}:latest
-      credentials:
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - name: Set lowercase environment variables
+        run: |
+          echo "REPO_OWNER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+          echo "REPO_NAME=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
       - uses: actions/checkout@v4
 
-      - name: Fetch latest data
-        run: Rscript /app/scrape.R
+      - name: Set up container
+        run: |
+          echo "IMAGE_NAME=ghcr.io/${{ env.REPO_NAME }}:latest" >> $GITHUB_ENV
+
+      - name: Run in Docker container
+        run: |
+          docker login ghcr.io -u "${{ github.actor }}" -p "${{ secrets.GITHUB_TOKEN }}"
+          docker run --rm -v "$GITHUB_WORKSPACE":/app ${{ env.IMAGE_NAME }} Rscript /app/scrape.R
 
       - run: |
           git config --global --add safe.directory $GITHUB_WORKSPACE
@@ -29,7 +35,7 @@ jobs:
       - name: Create commit message
         id: commit_message_step
         run: |
-          echo "commit_message=https://github.com/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> $GITHUB_OUTPUT
+          echo "commit_message=https://github.com/${{ env.REPO_NAME }}/actions/runs/$GITHUB_RUN_ID" >> $GITHUB_OUTPUT
 
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
