--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
       - name: Set lowercase environment variables
         run: |
-          REPO_OWNER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')
-          REPO_NAME=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')
+          REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]')
           IMAGE_NAME="ghcr.io/${REPO_OWNER}/${REPO_NAME}:latest"
           echo "REPO_OWNER=${REPO_OWNER}" >> $GITHUB_ENV
           echo "REPO_NAME=${REPO_NAME}" >> $GITHUB_ENV
