--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -15,11 +15,11 @@ jobs:
       contents: write
 
     steps:
-      - name: Set lowercase environment variables
+      - name: Set environment variables
         run: |
           REPO_OWNER=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
           REPO_NAME=$(echo "${{ github.repository }}" | tr '[:upper:]' '[:lower:]' | sed 's/.*\///')
-          IMAGE_NAME="ghcr.io/${{github.repository_owner}}/${{REPO_NAME}}:latest"
+          IMAGE_NAME="ghcr.io/${REPO_OWNER}/${REPO_NAME}:latest"
           echo "REPO_OWNER=${REPO_OWNER}" >> $GITHUB_ENV
           echo "REPO_NAME=${REPO_NAME}" >> $GITHUB_ENV
           echo "IMAGE_NAME=${IMAGE_NAME}" >> $GITHUB_ENV
